thy/Iptables_Semantics/Examples/IPPartEval/gopherproxy.meulie.net/iptables-save
# Generated by iptables-save v1.4.8 on Tue Sep  1 07:21:40 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 31.214.133.16/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.137.160.135/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 82.193.109.248/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 82.193.109.249/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 82.210.155.21/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.137.142.204/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.188.39.250/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 109.196.54.46/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 176.53.58.137/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 88.190.33.224/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.207.5.206/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 94.181.134.181/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.182.154.56/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.182.133.17/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.137.19.82/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.137.90.181/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 46.119.120.157/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 46.119.125.107/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.182.163.73/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.182.134.10/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.162.19.193/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.182.135.22/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.162.19.194/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.182.136.10/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.10.19.186/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 208.53.158.59/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 69.175.51.109/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 108.170.8.116/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.162.19.196/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.162.19.195/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.93.127.117/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 190.200.6.80/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.231.40.28/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 198.143.175.10/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 37.113.62.193/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 111.144.209.139/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 94.23.242.46/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 121.181.251.188/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 211.233.6.249/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 198.27.78.19/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 199.231.86.227/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.121.169.209/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 188.165.226.148/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 198.27.78.100/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 117.27.138.144/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.159.218.44/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 142.54.187.250/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 106.8.112.99/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 106.8.86.250/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.189.3.201/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.189.34.43/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.189.245.86/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 199.87.252.64/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 216.152.247.105/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 175.44.18.64/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 112.111.184.94/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 175.44.11.44/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 124.231.209.111/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.69.90.229/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 216.244.95.61/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.151.157.243/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 198.204.239.118/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 198.204.248.147/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 63.141.249.11/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 5.135.159.2/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 62.168.146.137/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.3.117.206/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 176.58.110.127/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.200.13.57/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 37.59.31.170/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.236.74.246/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 14.192.209.81/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 118.97.196.163/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.62.32.67/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 117.221.240.217/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 111.161.96.243/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 113.162.197.11/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 103.225.134.31/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 90.148.253.103/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 213.156.127.172/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 85.105.209.114/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 216.65.53.96/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 125.60.156.166/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 5.79.187.235/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 213.55.108.241/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 118.169.104.204/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 186.219.41.102/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 66.98.36.78/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 82.57.200.97/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 82.57.200.99/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 113.74.188.212/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 120.202.60.24/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 190.62.25.72/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 49.88.9.202/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 115.218.182.140/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 240.132.154.27/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 180.75.133.225/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 31.181.95.41/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 85.105.51.60/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 77.253.71.154/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 182.239.243.235/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 119.235.76.67/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 119.235.85.167/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 77.69.174.234/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 175.142.125.73/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 190.20.16.162/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 212.3.167.107/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.47.8.182/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.176.109.94/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 175.120.179.187/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 113.59.200.9/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 123.120.236.225/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 179.177.113.4/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 177.42.190.92/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 196.209.222.214/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 78.165.229.246/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.51.220.230/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.228.228.40/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 179.180.235.165/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.182.83.41/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 231.244.62.81/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.221.187.3/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.36.16.191/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 210.7.18.91/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.15.192.9/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.27.163.192/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.102.140.3/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 86.213.134.181/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 201.42.209.22/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 182.100.248.186/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 85.100.216.195/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 105.184.192.215/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 36.38.68.9/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 14.203.15.117/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 201.195.5.78/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 190.64.72.138/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 201.68.154.37/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 95.76.168.175/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 201.114.228.139/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 105.236.251.93/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 187.134.164.135/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 121.245.208.49/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 118.200.190.171/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 14.203.15.117/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 181.137.180.124/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.153.200.166/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.153.200.184/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 14.203.227.190/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 85.99.244.252/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.107.106.183/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 95.171.200.204/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 198.168.101.17/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 115.150.188.11/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 72.108.36.120/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 190.92.78.121/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 222.172.171.223/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 92.142.99.216/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 125.91.225.247/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 181.48.47.242/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.133.1.63/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 189.133.1.63/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.212.37.106/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 106.37.212.218/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.215.98.104/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 82.119.110.6/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 120.88.69.111/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 31.3.125.112/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 193.111.254.242/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 67.214.187.155/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 74.80.146.226/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 64.17.45.223/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.153.191.127/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 88.250.129.202/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 59.162.92.194/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 171.100.56.196/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 80.224.40.165/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.10.199.153/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 110.243.189.166/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 113.2.44.144/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 101.231.182.210/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 125.108.132.22/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 223.68.182.152/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 183.11.81.177/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 115.210.68.120/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 60.189.162.171/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 112.225.107.149/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 183.47.231.164/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 120.197.68.150/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 121.224.95.165/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 119.99.127.113/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 77.95.164.249/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 179.125.71.24/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.169.131.138/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 178.149.1.197/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 88.148.40.182/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 14.135.179.102/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 182.87.30.105/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 80.179.14.140/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 183.148.170.172/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 180.108.29.191/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 1.80.187.66/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 182.64.168.0/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 51.226.235.201/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 50.246.134.101/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 187.233.56.150/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 177.96.71.77/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 187.146.196.35/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 111.193.86.125/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 36.37.152.251/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 180.141.104.205/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 125.126.6.187/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 210.177.87.105/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 79.136.209.152/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.236.75.130/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 220.162.24.193/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 59.61.254.100/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 195.211.155.159/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 195.211.155.191/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 162.252.81.74/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 195.211.155.0/24 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 112.111.160.0/24 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.236.75.22/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.236.74.172/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 213.123.185.20/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 115.85.194.82/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.174.93.218/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 76.89.57.81/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 121.78.233.114/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.203.54.20/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 103.21.218.221/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 222.161.4.149/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.65.30.61/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 93.174.93.45/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 184.106.212.238/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 27.50.24.38/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 137.117.44.118/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.65.30.107/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 91.240.163.39/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 218.65.30.61/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 115.236.29.165/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 192.30.34.121/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 222.161.4.148/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 184.105.249.233/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -s 179.179.67.209/32 -j REJECT --reject-with icmp-net-unreachable
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 70 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5199 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4080 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1337 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Tue Sep  1 07:21:40 2015
